Changed up navbar. No more vertical spacing issue, yay.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,31 +42,34 @@ header h1 {
     line-height: 1;
 }
 
-.navbar {
-    background-color: black;
-    line-height: 3;
-    width: auto;
-    list-style: none;
-    text-align:center;
-}
+/* The navbar list came from alphardex, https://codepen.io/alphardex/pen/QWwveZG. Sass it, drop it, and with a few adjustments, it looks pretty good. -webkit-background-text needs to be added manually; sass output doesn't do it right. */
 
-nav ul {
+ul {
     padding: 0;
     margin: 0;
+    background: black;
+    text-align: center;
+    width: 100%;
 }
-
-.navbar li {
-    display: inline;
-}
-
-.navbar a {
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    padding-bottom: 3px;
-    font-size: 24px;
-    width: 20%;
-}
+    ul li {
+;
+      display: inline; }
+      ul li a {
+        --fill-color: #198CE6;
+        position: relative;
+        display: inline-block;
+        width: 20%;
+        padding: 4px 0;
+        font: 700 3rem Raleway, sans-serif;
+        text-decoration: none;
+        text-transform: uppercase;
+        -webkit-text-stroke: 2px var(--fill-color);
+        background: linear-gradient(var(--fill-color) 0 100%) left / 0 no-repeat;
+        color: transparent;
+        -webkit-background-clip: text;
+        transition: 0.5s linear; }
+        ul li a:hover {
+          background-size: 100%; }
 
 .definition {
     font-family: Georgia, 'Times New Roman', Times, serif;
